--- a/package.json
+++ b/package.json
@@ -2,11 +2,23 @@
   "name": "weather_app",
   "version": "1.0.0",
   "description": "modern and sleek weather application.",
-  "repository": "your-username/your-repository",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/your-username/your-repository.git"
+  },
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/your-username/your-repository/issues"
+  },
+  "homepage": "https://github.com/your-username/your-repository#readme",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "node": "^20.7.0"
+  }
 }
